# linux-cam-shim

./: Cargo.toml  LICENSE  Readme.md
.github/workflows/: ci.yml
docs/: tested-on.md
docs/releases/: v0.3.0.md
packaging/: build-deb.sh  cam-shim.service
packaging/deb/: postinst  postrm  prerm
packaging/modprobe.d/: cam-shim-v4l2loopback.conf
scripts/: build-release.sh  soak.sh
src/: camera_view.rs  compat.rs  device_registry.rs  devices.rs  doctor.rs  error.rs  hide.rs  hotplug.rs  lib.rs  loopback.rs  loopback_output.rs  main.rs  probe.rs  runtime.rs  serve.rs  session.rs  shim.rs  status.rs
